--- a/indexprueba.html
+++ b/indexprueba.html
@@ -7,6 +7,7 @@
     <title>Probando ununtu</title>
 </head>
 <body>
+    <p>cambiando algo para probar subirlo al repositorio de github por ubuntu</p>
     
 </body>
 </html>
